// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DynamicInputMulti should render properly 1`] = `
<DocumentFragment>
  <div
    class="govuk-!-margin-bottom-5 wrapper"
  >
    MockedDynamicInput
  </div>
  <div
    class="govuk-!-margin-bottom-5 wrapper"
  >
    MockedDynamicInput
    <button
      class="delete"
    >
      MockedCloseButton
      <span
        class="govuk-visually-hidden"
      >
        Remove this i am a multi input
      </span>
    </button>
  </div>
  <div
    class="govuk-!-margin-bottom-5 wrapper"
  >
    MockedDynamicInput
    <button
      class="delete"
    >
      MockedCloseButton
      <span
        class="govuk-visually-hidden"
      >
        Remove this i am a multi input
      </span>
    </button>
  </div>
  <div
    class="govuk-!-margin-bottom-5"
  >
    <button
      class="govuk-button lbh-button lbh-button--secondary lbh-button--add govuk-!-margin-top-0"
      role="button"
    >
      <svg
        fill="none"
        height="11"
        viewBox="0 0 11 11"
        width="11"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          fill="#00664F"
          height="1.94118"
          transform="rotate(-90 4.5293 11)"
          width="11"
          x="4.5293"
          y="11"
        />
        <rect
          fill="#00664F"
          height="1.94118"
          width="11"
          y="4.52942"
        />
      </svg>
      Add another
    </button>
  </div>
</DocumentFragment>
`;

exports[`DynamicInputMulti should render properly with isMultiInit false 1`] = `
<DocumentFragment>
  <div
    class="govuk-!-margin-bottom-5"
  >
    <button
      class="govuk-button lbh-button lbh-button--secondary lbh-button--add govuk-!-margin-top-0"
      role="button"
    >
      <svg
        fill="none"
        height="11"
        viewBox="0 0 11 11"
        width="11"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          fill="#00664F"
          height="1.94118"
          transform="rotate(-90 4.5293 11)"
          width="11"
          x="4.5293"
          y="11"
        />
        <rect
          fill="#00664F"
          height="1.94118"
          width="11"
          y="4.52942"
        />
      </svg>
      Add a something
    </button>
  </div>
</DocumentFragment>
`;
